--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ body {
   margin: 0;
 }
 
+.ui-pnotify-container {
+  width: 250px !important;
+}
+
 /**
  * Render the `main` element consistently in IE.
  */
